packages/system/monitoring-agents/templates/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: restrict-node-exporter
spec:
  ingressDeny:
  - fromEntities:
    - world
    toPorts:
    - ports:
      - port: "9100"
  ingress:
  - fromEntities:
    - world
    - host
    - cluster
  nodeSelector:
    matchLabels: {}
